--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ highlightjs_theme: "monokai-sublime"
 
 # Image CDN
 imagecdn:
-  #staging: "http://ed-dev.imgix.net"
-  #production: "http://ed.imgix.net"
+  staging: "https://ed-jeniross-dev.imgix.net"
+  production: "https://ed-jeniross.imgix.net"
 
 # Collections Example
 collections:
