update before switching to new Jekyll 3 SASS changes

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ plugins:
 title: "Jeni Ross"
 subtitle: "Tapestry Commissions, tufted rugs and wall hangings"
 name: Jeni Ross
-description: Jeni Ross art gallery
+description: Art gallery
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
